--- a/public/index.html
+++ b/public/index.html
@@ -32,7 +32,7 @@
     <title>Portfolio</title>
   </head>
   <body>
-    <form name="contact" netlify netlify-honeypot="bot-field" hidden>
+    <form name="contact" data-netlify="true" hidden>
       <input type="text" name="name" />
       <input type="email" name="email" />
       <textarea name="message"></textarea>
