change form path

--- a/public/index.html
+++ b/public/index.html
@@ -34,7 +34,7 @@
   <body>
     <div id="root"></div>
 
-    <form action="../src/components/Sent.js" name="contact" data-netlify="true" hidden>
+    <form name="contact" data-netlify="true" hidden>
       <input type="text" name="name" />
       <input type="email" name="email" />
       <textarea name="message"></textarea>
