edit style for sent.css

--- a/public/sent.html
+++ b/public/sent.html
@@ -9,7 +9,7 @@
 <body>
     <div className="bloc-message">
         <a href="/" id="message-retour">Retour à l'acceuil</a>
-        <h1 id="message-title">Message envoyé</h1>
+        <h1 className="message-title">Message envoyé</h1>
     </div>
 </body>
 </html>
