remove file useless

--- a/public/index.html
+++ b/public/index.html
@@ -21,11 +21,11 @@
   <body>
     <div id="root"></div>
 
-    <form action="/sent.html" name="contact" data-netlify="true" hidden>
+    <!-- <form action="/sent.html" name="contact" data-netlify="true" hidden>
       <input type="text" name="name" />
       <input type="email" name="email" />
       <textarea name="message"></textarea>
-    </form>
+    </form> -->
 
     <noscript>You need to enable JavaScript to run this app.</noscript>
   </body>
